--- a/latest/css/theme_extra.css
+++ b/latest/css/theme_extra.css
@@ -2,12 +2,12 @@
  * Tweak the overal size to better match RTD.
  */
 body {
-    font-size: 90%;
+	font-size: 90%;
 }
 
 h3, h4, h5, h6 {
-    color: #2980b9;
-    font-weight: 300
+	color: #2980b9;
+	font-weight: 300
 }
 
 /*
@@ -17,16 +17,16 @@ h3, h4, h5, h6 {
  * https://github.com/mkdocs/mkdocs/issues/175
  */
 .wy-menu-vertical span {
-    line-height: 18px;
-    padding: 0.4045em 1.618em;
-    display: block;
-    position: relative;
-    font-size: 90%;
-    color: #838383;
+	line-height: 18px;
+	padding: 0.4045em 1.618em;
+	display: block;
+	position: relative;
+	font-size: 90%;
+	color: #838383;
 }
 
 .wy-menu-vertical .subnav a {
-    padding: 0.4045em 2.427em;
+	padding: 0.4045em 2.427em;
 }
 
 /*
@@ -36,8 +36,8 @@ h3, h4, h5, h6 {
  * https://github.com/mkdocs/mkdocs/pull/202
  */
 .wy-nav-side {
-    height: 100%;
-    overflow-y: auto;
+	height: 100%;
+	overflow-y: auto;
 }
 
 /*
@@ -56,7 +56,7 @@ h3, h4, h5, h6 {
  * https://github.com/mkdocs/mkdocs/issues/233
  */
 code {
-    white-space: pre;
+	white-space: pre;
 }
 
 /*
@@ -66,7 +66,7 @@ code {
  * https://github.com/mkdocs/mkdocs/issues/313
  */
 p code {
-    word-wrap: break-word;
+	word-wrap: break-word;
 }
 
 /*
@@ -77,8 +77,8 @@ p code {
  * https://github.com/mkdocs/mkdocs/issues/411
  */
 code.cs, code.c {
-    font-weight: inherit;
-    font-style: inherit;
+	font-weight: inherit;
+	font-style: inherit;
 }
 
 /*
@@ -101,26 +101,38 @@ code.cs, code.c {
 
 #mkdocs-search-results article h3
 {
-    margin-top: 23px;
-    border-top: 1px solid #E1E4E5;
-    padding-top: 24px;
+	margin-top: 23px;
+	border-top: 1px solid #E1E4E5;
+	padding-top: 24px;
 }
 
 #mkdocs-search-results article:first-child h3 {
-    border-top: none;
+	border-top: none;
 }
 
 #mkdocs-search-query{
-    width: 100%;
-    border-radius: 50px;
-    padding: 6px 12px;
-    border-color: #D1D4D5;
+	width: 100%;
+	border-radius: 50px;
+	padding: 6px 12px;
+	border-color: #D1D4D5;
 }
 
 .wy-menu-vertical li ul {
-    display: inherit;
+	display: inherit;
 }
 
 .wy-menu-vertical li ul.subnav ul.subnav{
-    padding-left: 1em;
+	padding-left: 1em;
+}
+
+/* Customuru */
+p {
+	font-size: 100%;
+}
+code {
+	font-size: 100%;
+}
+
+.wy-side-nav-search {
+	background-color: #38b24a; /* green */
 }
